tests/hulk/errors/semantic/undeclared_var.hulk
let x = 5 in print(y);
